--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Service Status</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="one">Hello one</string>
+    <string name="two">Hello two</string>
+    <string name="three">Hello three</string>
+    <string name="four">Hello four</string>
 </resources>
